--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="jumbotron">
         <h2 id="logo">MIN</h2>
         <p id="min"><span>M</span>uhammad <span>I</span>khsan <span>N</span>asution </p>
-        <svg width=100%" height="1">
+        <svg width="100%" height="1">
             <line id="Line_1" data-name="Line 1" x2="536" transform="translate(0 0.5)" fill="none" stroke="#50d890" stroke-width="1"/>
         </svg>          
         <div class="socmed">
